# GammaRay

client/: CMakeLists.txt  clienttoolmodel.cpp
core/: CMakeLists.txt  toolmodel.cpp
core/tools/widgetinspector/: widgetinspector.cpp
ui/: CMakeLists.txt
